--- a/skytech_rc.rc
+++ b/skytech_rc.rc
@@ -4,7 +4,7 @@ IDI_ICON1               ICON    DISCARDABLE     "res\\app_icon48.ico"
 
 VS_VERSION_INFO     VERSIONINFO
 FILEVERSION         0, 1, 0, 3
-PRODUCTVERSION      0, 1, 0, 1
+PRODUCTVERSION      0, 1, 0, 3
 FILEFLAGSMASK       0x3fL
 FILEFLAGS           0
 FILEOS              VOS_NT_WINDOWS32
@@ -21,12 +21,12 @@ BEGIN
         BEGIN
             VALUE   "CompanyName",      "PMR\0"
             VALUE   "FileDescription",  "SkytechX\0"
-            VALUE   "FileVersion",      "1.01\0"
-            VALUE   "InternalName",     "skytechx\0"
+            VALUE   "FileVersion",      "1.03\0"
+            VALUE   "InternalName",     "skytechx_beta\0"
             VALUE   "LegalCopyright",   "Copyright 2015, Pavel Mraz\0"
             VALUE   "OriginalFilename", "skytech_x.exe\0"
             VALUE   "ProductName",      "SkytechX\0"
-            VALUE   "ProductVersion",   "1.01\0"
+            VALUE   "ProductVersion",   "1.03 Beta\0"
         END
     END
 END
