--- a/skytech_rc.rc
+++ b/skytech_rc.rc
@@ -21,12 +21,12 @@ BEGIN
         BEGIN
             VALUE   "CompanyName",      "PMR\0"
             VALUE   "FileDescription",  "SkytechX\0"
-            VALUE   "FileVersion",      "1.04 beta\0"
+            VALUE   "FileVersion",      "1.04\0"
             VALUE   "InternalName",     "skytechx\0"
             VALUE   "LegalCopyright",   "Copyright 2016, Pavel Mraz\0"
             VALUE   "OriginalFilename", "skytech_x.exe\0"
             VALUE   "ProductName",      "SkytechX\0"
-            VALUE   "ProductVersion",   "1.04 beta\0"
+            VALUE   "ProductVersion",   "1.04\0"
         END
     END
 END
